--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,6 @@
     "import pandas as pd\n",
     "import requests\n",
     "\n",
-    "from bs4 import BeautifulSoup\n",
     "from requests.adapters import HTTPAdapter\n",
     "from urllib3.util.retry import Retry\n",
     "\n",
@@ -18,7 +17,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "with open('user.txt', 'r') as file:\n",
-    "    STEAM_ID, API_KEY = file.read().split('\\n')\n",
+    "\tSTEAM_ID, API_KEY = file.read().split('\\n')\n",
     "\n",
     "GAMES_URL = 'https://api.steampowered.com/IPlayerService/GetOwnedGames/v0001?key={}'\n",
     "GAMES_URL = GAMES_URL.format(API_KEY)\n",
@@ -27,6 +26,8 @@
     "\n",
     "ACHIEV_URL = '&key=' + API_KEY + '&steamid=' + STEAM_ID\n",
     "ACHIEV_URL = 'https://api.steampowered.com/ISteamUserStats/GetPlayerAchievements/v0001/?appid={}' + ACHIEV_URL\n",
+    "\n",
+    "APP_URL = 'https://api.steamcmd.net/v1/info/{}'\n",
     "\n",
     "session = requests.Session()\n",
     "retry = Retry(connect=3, backoff_factor=0.5)\n",
@@ -53,27 +54,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for appid in df['appid']:\n",
-    "    response = session.get(ACHIEV_URL.format(appid))\n",
+    "# ~ 5 min\n",
     "\n",
-    "    try:\n",
-    "        result = response.json()['playerstats']['achievements']\n",
-    "        achievements = pd.json_normalize(result)\n",
-    "        unlocked = len(achievements[achievements.achieved == 1])\n",
-    "        locked = len(achievements[achievements.achieved == 0])\n",
-    "        total = unlocked + locked\n",
-    "        perfect = 0\n",
+    "achievements_data = []\n",
     "\n",
-    "        if unlocked == total:\n",
-    "            perfect = 1\n",
+    "for appid, name in zip(df['appid'], df['name']):\n",
+    "\tresponse = session.get(ACHIEV_URL.format(appid))\n",
     "\n",
-    "    except KeyError:\n",
-    "        unlocked, locked, total, perfect = 0, 0, 0, 0\n",
+    "\ttry:\n",
+    "\t\tresult = response.json()['playerstats']['achievements']\n",
+    "\t\tachievements = pd.json_normalize(result)\n",
+    "\t\tunlocked = (achievements['achieved'] == 1).sum()\n",
+    "\t\tlocked = (achievements['achieved'] == 0).sum()\n",
+    "\t\ttotal = unlocked + locked\n",
+    "\t\tperfect = int(unlocked == total)\n",
     "\n",
-    "    df.loc[df.appid == appid, 'achiev_unlocked'] = unlocked\n",
-    "    df.loc[df.appid == appid, 'achiev_locked'] = locked\n",
-    "    df.loc[df.appid == appid, 'achiev_total'] = total\n",
-    "    df.loc[df.appid == appid, 'achiev_perfect'] = perfect"
+    "\texcept KeyError:\n",
+    "\t\tunlocked, locked, total, perfect = 0, 0, 0, 0\n",
+    "\n",
+    "\tachievements_data.append([appid, unlocked, locked, total, perfect])\n",
+    "\tprint(\"Collected achievements for {}\".format(name))\n",
+    "\n",
+    "achievements_df = pd.DataFrame(achievements_data, columns=['appid', 'achievements_unlocked', 'achievements_locked', 'achievements_total', 'achievements_perfect'])\n",
+    "df = df.merge(achievements_df, on='appid')"
    ]
   },
   {
@@ -82,26 +85,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(20):\n",
-    "\tdf['tag_' + str(i+1)] = ''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for appid in df['appid']:\n",
-    "    page = session.get(\"https://store.steampowered.com/app/\" + str(appid) + \"/\")\n",
-    "    soup = BeautifulSoup(page.content)\n",
-    "    tags = soup.find_all(\"a\", {\"class\": \"app_tag\"})\n",
-    "    \n",
-    "    k = 1\n",
-    "    for tag in tags:\n",
-    "        tag = tag.text.strip()\n",
-    "        df.loc[df.appid == appid, 'tag_' + str(k)] = tag\n",
-    "        k += 1"
+    "# ~ 1.5 min\n",
+    "\n",
+    "for appid, name in zip(df['appid'], df['name']):\n",
+    "\tresponse = session.get(APP_URL.format(appid))\n",
+    "\ttry:\n",
+    "\t\ttags = response.json()['data'][str(appid)]['common']['store_tags']\n",
+    "\texcept KeyError:\n",
+    "\t\tprint(\"No tags for {}\".format(name))\n",
+    "\t\tcontinue\n",
+    "\ttags = dict(sorted(tags.items(), key=lambda x: int(x[0])))\n",
+    "\n",
+    "\tfor n, tag in tags.items():\n",
+    "\t\tdf.loc[df.appid == appid, 'tag_{}'.format(n)] = tag\n",
+    "\n",
+    "\tprint(\"Collected tags for {}\".format(name))"
    ]
   }
  ],
@@ -121,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.12.6"
   },
   "orig_nbformat": 4
  },
