Tag Names from SteamDB

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import pandas as pd\n",
     "import requests\n",
     "\n",
@@ -87,6 +88,9 @@
    "source": [
     "# ~ 1.5 min\n",
     "\n",
+    "with open(\"steamdb_tags.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "\ttags_dict = json.load(f)\n",
+    "\n",
     "for appid, name in zip(df['appid'], df['name']):\n",
     "\tresponse = session.get(APP_URL.format(appid))\n",
     "\ttry:\n",
@@ -97,6 +101,7 @@
     "\ttags = dict(sorted(tags.items(), key=lambda x: int(x[0])))\n",
     "\n",
     "\tfor n, tag in tags.items():\n",
+    "\t\ttag = tags_dict[str(tag)]\n",
     "\t\tdf.loc[df.appid == appid, 'tag_{}'.format(n)] = tag\n",
     "\n",
     "\tprint(\"Collected tags for {}\".format(name))"
