Tags Playtime (with weights)

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,6 +10,7 @@
     "import pandas as pd\n",
     "import requests\n",
     "\n",
+    "from collections import defaultdict\n",
     "from requests.adapters import HTTPAdapter\n",
     "from urllib3.util.retry import Retry\n",
     "\n",
@@ -50,13 +51,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Collecting Achievements"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ~ 5 min\n",
-    "\n",
     "achievements_data = []\n",
     "\n",
     "for appid, name in zip(df['appid'], df['name']):\n",
@@ -81,13 +87,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Collecting Tags"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ~ 1.5 min\n",
-    "\n",
     "with open(\"steamdb_tags.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "\ttags_dict = json.load(f)\n",
     "\n",
@@ -105,6 +116,44 @@
     "\t\tdf.loc[df.appid == appid, 'tag_{}'.format(n)] = tag\n",
     "\n",
     "\tprint(\"Collected tags for {}\".format(name))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calcuting Total Playtime using Tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = [round(max(0, 1 - i * 0.0265), 2) for i in range(20)]\n",
+    "\n",
+    "tag_playtime = defaultdict(float)\n",
+    "tag_playtime_weighted = defaultdict(float)\n",
+    "\n",
+    "for _, row in df.iterrows():\n",
+    "\tplaytime = row['playtime_forever']\n",
+    "\tfor i in range(20):\n",
+    "\t\ttag_column = f'tag_{i}'\n",
+    "\t\tif pd.notna(row[tag_column]):\n",
+    "\t\t\ttag = row[tag_column]\n",
+    "\t\t\ttag_playtime[tag] += playtime\n",
+    "\t\t\ttag_playtime_weighted[tag] += playtime * weights[i]\n",
+    "\n",
+    "tag_playtime_df = pd.DataFrame(tag_playtime.items(), columns=[\"Tag\", \"Total Playtime\"])\n",
+    "tag_playtime_df['Total Playtime (hours)'] = round(tag_playtime_df['Total Playtime'] / 60, 2)\n",
+    "\n",
+    "tag_playtime_weighted_df = pd.DataFrame(tag_playtime_weighted.items(), columns=[\"Tag\", \"Total Weighted Playtime\"])\n",
+    "tag_playtime_weighted_df['Total Weighted Playtime (hours)'] = round(tag_playtime_weighted_df['Total Weighted Playtime'] / 60, 2)\n",
+    "tag_playtime_weighted_df['Total Weighted Playtime'] = round(tag_playtime_weighted_df['Total Weighted Playtime'], 2)\n",
+    "\n",
+    "tag_playtime_df = pd.merge(tag_playtime_df, tag_playtime_weighted_df, on=\"Tag\")\n",
+    "tag_playtime_df = tag_playtime_df.sort_values(by=\"Total Weighted Playtime\", ascending=False)"
    ]
   }
  ],
