Collecting Additional Info (Developer, Publisher, Franchise)

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,11 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Collecting Steam Games Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ast\n",
     "import json\n",
     "import pandas as pd\n",
     "import requests\n",
@@ -54,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Collecting Achievements"
+    "### Collecting Additional Data"
    ]
   },
   {
@@ -87,13 +95,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Collecting Tags"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -104,25 +105,57 @@
     "\n",
     "for appid, name in zip(df['appid'], df['name']):\n",
     "\tresponse = session.get(APP_URL.format(appid))\n",
+    "\n",
+    "\ttry:\n",
+    "\t\tassociations = response.json()['data'][str(appid)]['common']['associations']\n",
+    "\t\tn = len(associations)\n",
+    "\t\tdeveloper, publisher, franchise = [], [], []\n",
+    "\n",
+    "\t\tfor i in range(n):\n",
+    "\t\t\tasso = associations[str(i)]\n",
+    "\t\t\tmatch(asso['type']):\n",
+    "\t\t\t\tcase 'developer':\n",
+    "\t\t\t\t\tdeveloper.append(asso['name'])\n",
+    "\t\t\t\tcase 'publisher':\n",
+    "\t\t\t\t\tpublisher.append(asso['name'])\n",
+    "\t\t\t\tcase 'franchise':\n",
+    "\t\t\t\t\tfranchise.append(asso['name'])\n",
+    "\n",
+    "\t\tdf.loc[df.appid == appid, 'developer'] = str(developer)\n",
+    "\t\tdf.loc[df.appid == appid, 'publisher'] = str(publisher)\n",
+    "\t\tdf.loc[df.appid == appid, 'franchise'] = str(franchise)\n",
+    "\n",
+    "\texcept KeyError:\n",
+    "\t\tprint(\"No associations for {}\".format(name))\n",
+    "\n",
     "\ttry:\n",
     "\t\ttags = response.json()['data'][str(appid)]['common']['store_tags']\n",
+    "\t\ttags = dict(sorted(tags.items(), key=lambda x: int(x[0])))\n",
+    "\n",
+    "\t\tfor n, tag in tags.items():\n",
+    "\t\t\ttag = tags_dict[str(tag)]\n",
+    "\t\t\tdf.loc[df.appid == appid, 'tag_{}'.format(n)] = tag\n",
+    "\n",
     "\texcept KeyError:\n",
     "\t\tprint(\"No tags for {}\".format(name))\n",
-    "\t\tcontinue\n",
-    "\ttags = dict(sorted(tags.items(), key=lambda x: int(x[0])))\n",
     "\n",
-    "\tfor n, tag in tags.items():\n",
-    "\t\ttag = tags_dict[str(tag)]\n",
-    "\t\tdf.loc[df.appid == appid, 'tag_{}'.format(n)] = tag\n",
-    "\n",
-    "\tprint(\"Collected tags for {}\".format(name))"
+    "\tprint(\"Collected info for {}\".format(name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('games.tsv', sep='\\t', index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calcuting Total Playtime using Tags"
+    "### Calcuting Stats"
    ]
   },
   {
@@ -154,6 +187,61 @@
     "\n",
     "tag_playtime_df = pd.merge(tag_playtime_df, tag_playtime_weighted_df, on=\"Tag\")\n",
     "tag_playtime_df = tag_playtime_df.sort_values(by=\"Total Weighted Playtime\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "developer_playtime = defaultdict(float)\n",
+    "developer_count = defaultdict(int)\n",
+    "publisher_playtime = defaultdict(float)\n",
+    "publisher_count = defaultdict(int)\n",
+    "franchise_playtime = defaultdict(float)\n",
+    "franchise_count = defaultdict(int)\n",
+    "\n",
+    "for _, row in df.iterrows():\n",
+    "\tplaytime = row['playtime_forever']\n",
+    "\tdeveloper = ast.literal_eval(row['developer'])\n",
+    "\tpublisher = ast.literal_eval(row['publisher'])\n",
+    "\tfranchise = ast.literal_eval(row['franchise'])\n",
+    "\n",
+    "\tfor dev in developer:\n",
+    "\t\tdeveloper_playtime[dev] += playtime\n",
+    "\t\tdeveloper_count[dev] += 1\n",
+    "\n",
+    "\tfor pub in publisher:\n",
+    "\t\tpublisher_playtime[pub] += playtime\n",
+    "\t\tpublisher_count[pub] += 1\n",
+    "\n",
+    "\tfor fran in franchise:\n",
+    "\t\tfranchise_playtime[fran] += playtime\n",
+    "\t\tfranchise_count[fran] += 1\n",
+    "\n",
+    "developer_playtime_df = pd.DataFrame(developer_playtime.items(), columns=['Developer', 'Playtime'])\n",
+    "publisher_playtime_df = pd.DataFrame(publisher_playtime.items(), columns=['Publisher', 'Playtime'])\n",
+    "franchise_playtime_df = pd.DataFrame(franchise_playtime.items(), columns=['Franchise', 'Playtime'])\n",
+    "\n",
+    "developer_playtime_df['Playtime (hours)'] = round(developer_playtime_df['Playtime'] / 60, 2)\n",
+    "developer_playtime_df['Playtime'] = round(developer_playtime_df['Playtime'], 2)\n",
+    "publisher_playtime_df['Playtime (hours)'] = round(publisher_playtime_df['Playtime'] / 60, 2)\n",
+    "publisher_playtime_df['Playtime'] = round(publisher_playtime_df['Playtime'], 2)\n",
+    "franchise_playtime_df['Playtime (hours)'] = round(franchise_playtime_df['Playtime'] / 60, 2)\n",
+    "franchise_playtime_df['Playtime'] = round(franchise_playtime_df['Playtime'], 2)\n",
+    "\n",
+    "developer_count_df = pd.DataFrame(developer_count.items(), columns=['Developer', 'Count'])\n",
+    "publisher_count_df = pd.DataFrame(publisher_count.items(), columns=['Publisher', 'Count'])\n",
+    "franchise_count_df = pd.DataFrame(franchise_count.items(), columns=['Franchise', 'Count'])\n",
+    "\n",
+    "developer_playtime_df = pd.merge(developer_playtime_df, developer_count_df, on='Developer', how='left')\n",
+    "publisher_playtime_df = pd.merge(publisher_playtime_df, publisher_count_df, on='Publisher', how='left')\n",
+    "franchise_playtime_df = pd.merge(franchise_playtime_df, franchise_count_df, on='Franchise', how='left')\n",
+    "\n",
+    "developer_playtime_df = developer_playtime_df.sort_values(by='Playtime', ascending=False)\n",
+    "publisher_playtime_df = publisher_playtime_df.sort_values(by='Playtime', ascending=False)\n",
+    "franchise_playtime_df = franchise_playtime_df.sort_values(by='Playtime', ascending=False)"
    ]
   }
  ],
