Improved Stats with Achievements data

--- a/main.ipynb
+++ b/main.ipynb
@@ -126,6 +126,10 @@
     "\t\tdf.loc[df.appid == appid, 'franchise'] = str(franchise)\n",
     "\n",
     "\texcept KeyError:\n",
+    "\t\tdf.loc[df.appid == appid, 'developer'] = '[]'\n",
+    "\t\tdf.loc[df.appid == appid, 'publisher'] = '[]'\n",
+    "\t\tdf.loc[df.appid == appid, 'franchise'] = '[]'\n",
+    "\n",
     "\t\tprint(\"No associations for {}\".format(name))\n",
     "\n",
     "\ttry:\n",
@@ -148,7 +152,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('games.tsv', sep='\\t', index=False)"
+    "indexes=['appid', 'name', 'developer', 'publisher', 'franchise',\n",
+    "\t\t 'achievements_unlocked', 'achievements_locked', 'achievements_total', 'achievements_perfect',\n",
+    "\t\t 'playtime_forever', 'playtime_windows_forever', 'playtime_mac_forever', 'playtime_linux_forever', 'playtime_deck_forever', 'playtime_disconnected', 'playtime_2weeks', 'rtime_last_played',\n",
+    "\t\t 'tag_0', 'tag_1', 'tag_2', 'tag_3', 'tag_4', 'tag_5', 'tag_6', 'tag_7', 'tag_8', 'tag_9', 'tag_10', 'tag_11', 'tag_12', 'tag_13', 'tag_14', 'tag_15', 'tag_16', 'tag_17', 'tag_18', 'tag_19',\n",
+    "\t\t 'has_leaderboards', 'has_community_visible_stats', 'content_descriptorids', 'img_icon_url']\n",
+    "\n",
+    "df = df.reindex(indexes, axis='columns')\n",
+    "df.to_csv('stats/games.tsv', sep='\\t', index=False)"
    ]
   },
   {
@@ -166,17 +177,23 @@
    "source": [
     "weights = [round(max(0, 1 - i * 0.0265), 2) for i in range(20)]\n",
     "\n",
-    "tag_playtime = defaultdict(float)\n",
-    "tag_playtime_weighted = defaultdict(float)\n",
+    "tag_playtime, tag_playtime_weighted, tag_count, tag_achievements, tag_perfects = defaultdict(float), defaultdict(float), defaultdict(int), defaultdict(float), defaultdict(float)\n",
     "\n",
     "for _, row in df.iterrows():\n",
     "\tplaytime = row['playtime_forever']\n",
+    "\tachievements = row['achievements_unlocked']\n",
+    "\tperfects = row['achievements_perfect']\n",
+    "\n",
     "\tfor i in range(20):\n",
     "\t\ttag_column = f'tag_{i}'\n",
     "\t\tif pd.notna(row[tag_column]):\n",
     "\t\t\ttag = row[tag_column]\n",
     "\t\t\ttag_playtime[tag] += playtime\n",
     "\t\t\ttag_playtime_weighted[tag] += playtime * weights[i]\n",
+    "\n",
+    "\t\t\ttag_count[tag] += 1\n",
+    "\t\t\ttag_achievements[tag] += achievements\n",
+    "\t\t\ttag_perfects[tag] += perfects\n",
     "\n",
     "tag_playtime_df = pd.DataFrame(tag_playtime.items(), columns=[\"Tag\", \"Total Playtime\"])\n",
     "tag_playtime_df['Total Playtime (hours)'] = round(tag_playtime_df['Total Playtime'] / 60, 2)\n",
@@ -186,7 +203,19 @@
     "tag_playtime_weighted_df['Total Weighted Playtime'] = round(tag_playtime_weighted_df['Total Weighted Playtime'], 2)\n",
     "\n",
     "tag_playtime_df = pd.merge(tag_playtime_df, tag_playtime_weighted_df, on=\"Tag\")\n",
-    "tag_playtime_df = tag_playtime_df.sort_values(by=\"Total Weighted Playtime\", ascending=False)"
+    "tag_playtime_df = tag_playtime_df.sort_values(by=\"Total Weighted Playtime\", ascending=False)\n",
+    "\n",
+    "tag_count_df = pd.DataFrame(tag_count.items(), columns=[\"Tag\", \"Total Games\"])\n",
+    "tag_achievements_df = pd.DataFrame(tag_achievements.items(), columns=[\"Tag\", \"Total Achievements\"])\n",
+    "tag_perfects_df = pd.DataFrame(tag_perfects.items(), columns=[\"Tag\", \"Total Perfect Games\"])\n",
+    "\n",
+    "tag_df = tag_playtime_df.merge(tag_count_df, on=\"Tag\")\n",
+    "tag_df = tag_df.merge(tag_achievements_df, on=\"Tag\")\n",
+    "tag_df = tag_df.merge(tag_perfects_df, on=\"Tag\")\n",
+    "\n",
+    "tag_df['Completion Percentage'] = round(tag_df['Total Perfect Games'] / tag_df['Total Games'] * 100, 2)\n",
+    "\n",
+    "tag_df.to_csv('stats/tags.tsv', sep='\\t', index=False)"
    ]
   },
   {
@@ -195,15 +224,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "developer_playtime = defaultdict(float)\n",
-    "developer_count = defaultdict(int)\n",
-    "publisher_playtime = defaultdict(float)\n",
-    "publisher_count = defaultdict(int)\n",
-    "franchise_playtime = defaultdict(float)\n",
-    "franchise_count = defaultdict(int)\n",
+    "developer_playtime, developer_count, developer_achievements, developer_perfects = defaultdict(float), defaultdict(int), defaultdict(int), defaultdict(int)\n",
+    "publisher_playtime, publisher_count, publisher_achievements, publisher_perfects = defaultdict(float), defaultdict(int), defaultdict(int), defaultdict(int)\n",
+    "franchise_playtime, franchise_count, franchise_achievements, franchise_perfects = defaultdict(float), defaultdict(int), defaultdict(int), defaultdict(int)\n",
     "\n",
     "for _, row in df.iterrows():\n",
     "\tplaytime = row['playtime_forever']\n",
+    "\tachievements = row['achievements_unlocked']\n",
+    "\tperfects = row['achievements_perfect']\n",
+    "\n",
     "\tdeveloper = ast.literal_eval(row['developer'])\n",
     "\tpublisher = ast.literal_eval(row['publisher'])\n",
     "\tfranchise = ast.literal_eval(row['franchise'])\n",
@@ -211,37 +240,69 @@
     "\tfor dev in developer:\n",
     "\t\tdeveloper_playtime[dev] += playtime\n",
     "\t\tdeveloper_count[dev] += 1\n",
+    "\t\tdeveloper_achievements[dev] += achievements\n",
+    "\t\tdeveloper_perfects[dev] += perfects\n",
     "\n",
     "\tfor pub in publisher:\n",
     "\t\tpublisher_playtime[pub] += playtime\n",
     "\t\tpublisher_count[pub] += 1\n",
+    "\t\tpublisher_achievements[pub] += achievements\n",
+    "\t\tpublisher_perfects[pub] += perfects\n",
     "\n",
     "\tfor fran in franchise:\n",
     "\t\tfranchise_playtime[fran] += playtime\n",
     "\t\tfranchise_count[fran] += 1\n",
+    "\t\tfranchise_achievements[fran] += achievements\n",
+    "\t\tfranchise_perfects[fran] += perfects\n",
     "\n",
-    "developer_playtime_df = pd.DataFrame(developer_playtime.items(), columns=['Developer', 'Playtime'])\n",
-    "publisher_playtime_df = pd.DataFrame(publisher_playtime.items(), columns=['Publisher', 'Playtime'])\n",
-    "franchise_playtime_df = pd.DataFrame(franchise_playtime.items(), columns=['Franchise', 'Playtime'])\n",
+    "developer_playtime_df = pd.DataFrame(developer_playtime.items(), columns=['Developer', 'Total Playtime'])\n",
+    "publisher_playtime_df = pd.DataFrame(publisher_playtime.items(), columns=['Publisher', 'Total Playtime'])\n",
+    "franchise_playtime_df = pd.DataFrame(franchise_playtime.items(), columns=['Franchise', 'Total Playtime'])\n",
     "\n",
-    "developer_playtime_df['Playtime (hours)'] = round(developer_playtime_df['Playtime'] / 60, 2)\n",
-    "developer_playtime_df['Playtime'] = round(developer_playtime_df['Playtime'], 2)\n",
-    "publisher_playtime_df['Playtime (hours)'] = round(publisher_playtime_df['Playtime'] / 60, 2)\n",
-    "publisher_playtime_df['Playtime'] = round(publisher_playtime_df['Playtime'], 2)\n",
-    "franchise_playtime_df['Playtime (hours)'] = round(franchise_playtime_df['Playtime'] / 60, 2)\n",
-    "franchise_playtime_df['Playtime'] = round(franchise_playtime_df['Playtime'], 2)\n",
+    "developer_playtime_df['Total Playtime (hours)'] = round(developer_playtime_df['Total Playtime'] / 60, 2)\n",
+    "developer_playtime_df['Total Playtime'] = round(developer_playtime_df['Total Playtime'], 2)\n",
+    "publisher_playtime_df['Total Playtime (hours)'] = round(publisher_playtime_df['Total Playtime'] / 60, 2)\n",
+    "publisher_playtime_df['Total Playtime'] = round(publisher_playtime_df['Total Playtime'], 2)\n",
+    "franchise_playtime_df['Total Playtime (hours)'] = round(franchise_playtime_df['Total Playtime'] / 60, 2)\n",
+    "franchise_playtime_df['Total Playtime'] = round(franchise_playtime_df['Total Playtime'], 2)\n",
     "\n",
-    "developer_count_df = pd.DataFrame(developer_count.items(), columns=['Developer', 'Count'])\n",
-    "publisher_count_df = pd.DataFrame(publisher_count.items(), columns=['Publisher', 'Count'])\n",
-    "franchise_count_df = pd.DataFrame(franchise_count.items(), columns=['Franchise', 'Count'])\n",
+    "developer_count_df = pd.DataFrame(developer_count.items(), columns=['Developer', 'Total Games'])\n",
+    "publisher_count_df = pd.DataFrame(publisher_count.items(), columns=['Publisher', 'Total Games'])\n",
+    "franchise_count_df = pd.DataFrame(franchise_count.items(), columns=['Franchise', 'Total Games'])\n",
     "\n",
     "developer_playtime_df = pd.merge(developer_playtime_df, developer_count_df, on='Developer', how='left')\n",
     "publisher_playtime_df = pd.merge(publisher_playtime_df, publisher_count_df, on='Publisher', how='left')\n",
     "franchise_playtime_df = pd.merge(franchise_playtime_df, franchise_count_df, on='Franchise', how='left')\n",
     "\n",
-    "developer_playtime_df = developer_playtime_df.sort_values(by='Playtime', ascending=False)\n",
-    "publisher_playtime_df = publisher_playtime_df.sort_values(by='Playtime', ascending=False)\n",
-    "franchise_playtime_df = franchise_playtime_df.sort_values(by='Playtime', ascending=False)"
+    "developer_playtime_df = developer_playtime_df.sort_values(by='Total Playtime', ascending=False)\n",
+    "publisher_playtime_df = publisher_playtime_df.sort_values(by='Total Playtime', ascending=False)\n",
+    "franchise_playtime_df = franchise_playtime_df.sort_values(by='Total Playtime', ascending=False)\n",
+    "\n",
+    "developer_achievements_df = pd.DataFrame(developer_achievements.items(), columns=['Developer', 'Total Achievements'])\n",
+    "developer_perfects_df = pd.DataFrame(developer_perfects.items(), columns=['Developer', 'Total Perfect Games'])\n",
+    "\n",
+    "publisher_achievements_df = pd.DataFrame(publisher_achievements.items(), columns=['Publisher', 'Total Achievements'])\n",
+    "publisher_perfects_df = pd.DataFrame(publisher_perfects.items(), columns=['Publisher', 'Total Perfect Games'])\n",
+    "\n",
+    "franchise_achievements_df = pd.DataFrame(franchise_achievements.items(), columns=['Franchise', 'Total Achievements'])\n",
+    "franchise_perfects_df = pd.DataFrame(franchise_perfects.items(), columns=['Franchise', 'Total Perfect Games'])\n",
+    "\n",
+    "developer_df = developer_playtime_df.merge(developer_achievements_df, on='Developer', how='left')\n",
+    "developer_df = developer_df.merge(developer_perfects_df, on='Developer', how='left')\n",
+    "\n",
+    "publisher_df = publisher_playtime_df.merge(publisher_achievements_df, on='Publisher', how='left')\n",
+    "publisher_df = publisher_df.merge(publisher_perfects_df, on='Publisher', how='left')\n",
+    "\n",
+    "franchise_df = franchise_playtime_df.merge(franchise_achievements_df, on='Franchise', how='left')\n",
+    "franchise_df = franchise_df.merge(franchise_perfects_df, on='Franchise', how='left')\n",
+    "\n",
+    "developer_df['Completion Percentage'] = round(developer_df['Total Perfect Games'] / developer_df['Total Games'] * 100, 2)\n",
+    "publisher_df['Completion Percentage'] = round(publisher_df['Total Perfect Games'] / publisher_df['Total Games'] * 100, 2)\n",
+    "franchise_df['Completion Percentage'] = round(franchise_df['Total Perfect Games'] / franchise_df['Total Games'] * 100, 2)\n",
+    "\n",
+    "developer_df.to_csv('stats/developer.tsv', sep='\\t', index=False)\n",
+    "publisher_df.to_csv('stats/publisher.tsv', sep='\\t', index=False)\n",
+    "franchise_df.to_csv('stats/franchise.tsv', sep='\\t', index=False)"
    ]
   }
  ],
